Devise gem integrated for email and signup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,9 @@
       <li><%= link_to "Login", welcome_login_path %></li>
     </ul>
   
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    
     <%= yield %>
     
   </div>
