--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -31,16 +31,16 @@
       </div>
     </div>
     <div class="control-group">
-      <%= f.label :salesperson, class: 'control-label' %><br>
-      <div class="controls">
-        <%= f.text_field :salesperson %>
+      <%= f.label :employee, class: 'control-label' %>
+      <div class ="controls">
+        <%= collection_select(:invoice, :employee_id, Employee.all, :id, :name, {}, { :multiple => false }) %>
       </div>
     </div>
     
     <div class="control-group">
       <%= f.label "Status", class: 'control-label' %>
       <div class="controls">
-        <%= f.select(:status_type, options_for_select([['PAID', 'PAID'],['PENDING', 'PENDING']]), { include_blank: true }) %>
+        <%= f.select(:status_type, options_for_select([['PAID', 'PAID'], ['PENDING', 'PENDING']]), { include_blank: true }) %>
       </div>
     </div>
   
